added contact section

--- a/src/index.html
+++ b/src/index.html
@@ -147,18 +147,33 @@
         <div class="iceCream"></div>
         <div class="sugarCubes"></div>
     </section>
-    <section id="contact-section">
-        <div class="form-container">
+    <section id="contact">
+        <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24183.894792908377!2d-73.94448923942666!3d40.74031489325027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ed16db83ad1%3A0xbc845c2a1ddd9c48!2sSunnyside%2C%20Queens%2C%20Nowy%20Jork%2C%20Stany%20Zjednoczone!5e0!3m2!1spl!2spl!4v1635853114820!5m2!1spl!2spl"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        <div class="form-container">
-<!--            @todo change form into mail, number, opening hours-->
-            <form type="submit">
-                <input type="text" id="fname" name="fname" placeholder="Name"><br><br>
-                <input type="email" id="mail" name="mail" placeholder="E-mail"><br><br>
-                <input type="submit" value="Submit">
-            </form>
+        <div class="info-container">
+            <div class="contact-details">
+                <h3>Opening hours</h3>
+                <br>
+                Monday-Friday: 8:30-18:00
+                <br>
+                Saturday: 8:30-14:00
+            </div>
+
+            <div class="contact-details">
+                <h3>Contact</h3>
+                <br>
+                email : <a href="mailto:contact@sunnyside.com">contact@sunnyside.com</a>
+                <br>
+                phone number: <a href="tel:+48663131993">663-131-993</a>
+                <br>
+                address: <a
+                    href="https://www.google.com/maps/place/Sunnyside,+Queens,+Nowy+Jork,+Stany+Zjednoczone/@40.7403149,-73.9444892,14z/data=!3m1!4b1!4m5!3m4!1s0x89c25ed16db83ad1:0xbc845c2a1ddd9c48!8m2!3d40.7432759!4d-73.9196324"
+                    target="_blank">49-02 Laurel Hill Blvd, Queens, NY 1137</a>
+            </div>
+
+
         </div>
     </section>
 
