--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             rel="stylesheet"
     />
     <link rel="stylesheet" href="scss/style.scss"/>
-    <title>Frontend Mentor | Sunnyside agency landing page</title>
+    <title>Sunnyside agency landing page</title>
 </head>
 
 <body>
