before slider implementation

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
                 <p class="position">Marketing Director</p>
             </div>
             <div class="testimonial">
-                <img src=".//images/image-thomas.jpg" alt="Thomas"/>
+                <img src="./images/image-thomas.jpg" alt="Thomas"/>
                 <p class="quote">
                     Sunnyside’s enthusiasm coupled with their keen
                     interest in our brand’s success made it a satisfying
@@ -130,7 +130,7 @@
             </div>
 
             <div class="testimonial">
-                <img src=".//images/image-jennie.jpg" alt="Jennie"/>
+                <img src="./images/image-jennie.jpg" alt="Jennie"/>
                 <p class="quote">
                     Incredible end result! Our sales increased over 400%
                     when we worked with Sunnyside. Highly recommended!
