working on button handlers for slider

--- a/src/index.html
+++ b/src/index.html
@@ -106,9 +106,12 @@
     </section>
 
     <section id="testimonials">
-        <div class="testimonialcontainer">
+
+        <div class="testimonial-container">
+            <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow right-arrow'>
+            <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow left-arrow'>
             <h4>Client testimonials</h4>
-            <div class="testimonial">
+            <div class="testimonial active">
                 <img src="./images/image-emily.jpg" alt="Emily"/>
                 <p class="quote">
                     We put our trust in Sunnyside and they delivered,
