finished styling arrows

--- a/src/index.html
+++ b/src/index.html
@@ -108,9 +108,12 @@
     <section id="testimonials">
 
         <div class="testimonial-container">
+            <h4>Client testimonials</h4>
+            <div class="testimonial-box">
             <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow right-arrow'>
             <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow left-arrow'>
-            <h4>Client testimonials</h4>
+
+
             <div class="testimonial active">
                 <img src="./images/image-emily.jpg" alt="Emily"/>
                 <p class="quote">
@@ -140,6 +143,7 @@
                 </p>
                 <p class="author">Jennie F.</p>
                 <p class="position">Business Owner</p>
+            </div>
             </div>
         </div>
     </section>
