--- a/src/index.html
+++ b/src/index.html
@@ -47,68 +47,68 @@
         </div>
     </header>
 
-    <section id="about">
-        <div class="keypoints reversed">
-            <div class="bgcImg transformImage"></div>
-            <div class="contentBox">
-                <h2>Transform your brand</h2>
-                <p>
-                    We are a full-service creative agency specializing
-                    in helping brands grow fast. Engage your clients
-                    through compelling visuals that do most of the
-                    marketing for you.
-                </p>
-                <div class="button">
-                    <button class="yellow">Learn more</button>
-                </div>
-            </div>
-        </div>
+<!--    <section id="about">-->
+<!--        <div class="keypoints reversed">-->
+<!--            <div class="bgcImg transformImage"></div>-->
+<!--            <div class="contentBox">-->
+<!--                <h2>Transform your brand</h2>-->
+<!--                <p>-->
+<!--                    We are a full-service creative agency specializing-->
+<!--                    in helping brands grow fast. Engage your clients-->
+<!--                    through compelling visuals that do most of the-->
+<!--                    marketing for you.-->
+<!--                </p>-->
+<!--                <div class="button">-->
+<!--                    <button class="yellow">Learn more</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="keypoints">
-            <div class="bgcImg standout"></div>
-            <div class="contentBox">
-                <h2>Stand out to the right audience</h2>
-                <p>
-                    Using a collaborative formula of designers,
-                    researchers, photographers, videographers, and
-                    copywriters, we’ll build and extend your brand in
-                    digital places.
-                </p>
-                <div class="button">
-                    <button>Learn more</button>
-                </div>
-            </div>
-        </div>
+<!--        <div class="keypoints">-->
+<!--            <div class="bgcImg standout"></div>-->
+<!--            <div class="contentBox">-->
+<!--                <h2>Stand out to the right audience</h2>-->
+<!--                <p>-->
+<!--                    Using a collaborative formula of designers,-->
+<!--                    researchers, photographers, videographers, and-->
+<!--                    copywriters, we’ll build and extend your brand in-->
+<!--                    digital places.-->
+<!--                </p>-->
+<!--                <div class="button">-->
+<!--                    <button>Learn more</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="keypoints" id="services">
-            <div class="additionalPoints cherry">
-                <div>
-                    <h3>Graphic design</h3>
-                    <p>
-                        Great design makes you memorable. We deliver
-                        artwork that underscores your brand message and
-                        captures potential clients’ attention.
-                    </p>
-                </div>
-            </div>
+<!--        <div class="keypoints" id="services">-->
+<!--            <div class="additionalPoints cherry">-->
+<!--                <div>-->
+<!--                    <h3>Graphic design</h3>-->
+<!--                    <p>-->
+<!--                        Great design makes you memorable. We deliver-->
+<!--                        artwork that underscores your brand message and-->
+<!--                        captures potential clients’ attention.-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--            </div>-->
 
-            <div class="additionalPoints orange">
-                <div>
-                    <h3>Photography</h3>
-                    <p>
-                        Increase your credibility by getting the most
-                        stunning, high-quality photos that improve your
-                        business image.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--            <div class="additionalPoints orange">-->
+<!--                <div>-->
+<!--                    <h3>Photography</h3>-->
+<!--                    <p>-->
+<!--                        Increase your credibility by getting the most-->
+<!--                        stunning, high-quality photos that improve your-->
+<!--                        business image.-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 
     <section id="testimonials">
 
+        <h4>Client testimonials</h4>
         <div class="testimonial-container">
-            <h4>Client testimonials</h4>
             <div class="testimonial-box">
             <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow right-arrow'>
             <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow left-arrow'>
