testimonial section updated - grid implemented

--- a/src/index.html
+++ b/src/index.html
@@ -182,38 +182,38 @@
         </div>
     </section>
 
-    <footer>
-        <div class="footerNav">
-            <img src="./images/footerlogo.svg" alt="logo"/>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-            </ul>
-        </div>
-        <div class="socialBar">
-            <a href="https://www.facebook.com/"
-            ><img
-                    src="./images/icon-facebook.svg"
-                    alt="icon-facebook"
-            /></a>
-            <a href="https://www.instagram.com/"
-            ><img
-                    src="./images/icon-instagram.svg"
-                    alt="icon-instagram"
-            /></a>
-            <a href="https://twitter.com/?lang=en"
-            ><img
-                    src="./images/icon-twitter.svg"
-                    alt="icon-twitter"
-            /></a>
-            <a href="https://www.pinterest.com/"
-            ><img
-                    src="./images/icon-pinterest.svg"
-                    alt="icon-pinterest"
-            /></a>
-        </div>
-    </footer>
+<!--    <footer>-->
+<!--        <div class="footerNav">-->
+<!--            <img src="./images/footerlogo.svg" alt="logo"/>-->
+<!--            <ul>-->
+<!--                <li><a href="#about">About</a></li>-->
+<!--                <li><a href="#services">Services</a></li>-->
+<!--                <li><a href="#testimonials">Testimonials</a></li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--        <div class="socialBar">-->
+<!--            <a href="https://www.facebook.com/"-->
+<!--            ><img-->
+<!--                    src="./images/icon-facebook.svg"-->
+<!--                    alt="icon-facebook"-->
+<!--            /></a>-->
+<!--            <a href="https://www.instagram.com/"-->
+<!--            ><img-->
+<!--                    src="./images/icon-instagram.svg"-->
+<!--                    alt="icon-instagram"-->
+<!--            /></a>-->
+<!--            <a href="https://twitter.com/?lang=en"-->
+<!--            ><img-->
+<!--                    src="./images/icon-twitter.svg"-->
+<!--                    alt="icon-twitter"-->
+<!--            /></a>-->
+<!--            <a href="https://www.pinterest.com/"-->
+<!--            ><img-->
+<!--                    src="./images/icon-pinterest.svg"-->
+<!--                    alt="icon-pinterest"-->
+<!--            /></a>-->
+<!--        </div>-->
+<!--    </footer>-->
 </div>
 <script src="./js/main.js"></script>
 </body>
