--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,6 @@
 
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -185,7 +184,7 @@
                 <img src="./images/footerlogo.svg" alt="logo"/>
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#">Top</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                 </ul>
                 <div class="socialBar">
