--- a/src/index.html
+++ b/src/index.html
@@ -21,30 +21,30 @@
 
 <body>
 <div class="wrapper">
-            <header>
-                <nav>
-                    <img src="./images/logo.svg" alt="logo" class="logo"/><img
-                        src="./images/icon-hamburger.svg"
-                        alt="icon-hamburger"
-                        class="burger"
-                />
+    <header>
+        <nav>
+            <img src="./images/logo.svg" alt="sunnyside logo" class="logo"/><img
+                src="./images/icon-hamburger.svg"
+                alt="icon-hamburger"
+                class="burger"
+        />
 
-                    <ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
 
-                <div class="cta">
-                    <h1>We are creatives</h1>
-                    <img
-                            src="./images/icon-arrow-down.svg"
-                            alt="icon-arrow-down"
-                            class="arrow"
-                    />
-                </div>
-            </header>
+        <div class="cta">
+            <h1>We are creatives</h1>
+            <img
+                    src="./images/icon-arrow-down.svg"
+                    alt=""
+                    class="arrow"
+            />
+        </div>
+    </header>
 
     <section id="about">
         <div class="key-points reversed">
@@ -103,115 +103,115 @@
         </div>
     </section>
 
-            <section id="testimonials">
+    <section id="testimonials">
 
-                <div class="testimonial-container">
-                    <h4>Client testimonials</h4>
-                    <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow right-arrow'>
-                    <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow left-arrow'>
-                    <div class="testimonial-box">
-                        <div class="testimonial active">
-                            <img src="./images/image-emily.jpg" alt="Emily"/>
-                            <p class="quote">
-                                We put our trust in Sunnyside and they delivered,
-                                making sure our needs were met and deadlines were
-                                always hit.
-                            </p>
-                            <p class="author">Emily R.</p>
-                            <p class="position">Marketing Director</p>
-                        </div>
-                        <div class="testimonial">
-                            <img src="./images/image-thomas.jpg" alt="Thomas"/>
-                            <p class="quote">
-                                Sunnyside’s enthusiasm coupled with their keen
-                                interest in our brand’s success made it a satisfying
-                                and enjoyable experience.
-                            </p>
-                            <p class="author">Thomas S.</p>
-                            <p class="position">Chief Operating Officer</p>
-                        </div>
+        <div class="testimonial-container">
+            <h4>Client testimonials</h4>
+            <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow right-arrow'>
+            <img src="images/icon-arrow-slider.svg" alt="arrow slider" class='arrow left-arrow'>
+            <div class="testimonial-box">
+                <div class="testimonial active">
+                    <img src="./images/image-emily.jpg" alt="Emily"/>
+                    <p class="quote">
+                        We put our trust in Sunnyside and they delivered,
+                        making sure our needs were met and deadlines were
+                        always hit.
+                    </p>
+                    <p class="author">Emily R.</p>
+                    <p class="position">Marketing Director</p>
+                </div>
+                <div class="testimonial">
+                    <img src="./images/image-thomas.jpg" alt="Thomas"/>
+                    <p class="quote">
+                        Sunnyside’s enthusiasm coupled with their keen
+                        interest in our brand’s success made it a satisfying
+                        and enjoyable experience.
+                    </p>
+                    <p class="author">Thomas S.</p>
+                    <p class="position">Chief Operating Officer</p>
+                </div>
 
-                        <div class="testimonial">
-                            <img src="./images/image-jennie.jpg" alt="Jennie"/>
-                            <p class="quote">
-                                Incredible end result! Our sales increased over 400%
-                                when we worked with Sunnyside. Highly recommended!
-                            </p>
-                            <p class="author">Jennie F.</p>
-                            <p class="position">Business Owner</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="images">
-                <div class="milk"></div>
-                <div class="orangePlate"></div>
-                <div class="iceCream"></div>
-                <div class="sugarCubes"></div>
-            </section>
-        <section id="contact">
-            <div class="contact-container">
-                <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24183.894792908377!2d-73.94448923942666!3d40.74031489325027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ed16db83ad1%3A0xbc845c2a1ddd9c48!2sSunnyside%2C%20Queens%2C%20Nowy%20Jork%2C%20Stany%20Zjednoczone!5e0!3m2!1spl!2spl!4v1635853114820!5m2!1spl!2spl"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
-                <div class="contact-details hours">
-                    <h3>Opening hours</h3>
-                    <br>
-                    Monday-Friday: 8:30-18:00
-                    <br>
-                    Saturday: 8:30-14:00
-                </div>
-                <div class="contact-details contact-options">
-                    <h3>Contact</h3>
-                    <br>
-                    email : <a href="mailto:contact@sunnyside.com">contact@sunnyside.com</a>
-                    <br>
-                    phone number: <a href="tel:+48663131993">663-131-993</a>
-                    <br>
-                    address: <a
-                        href="https://www.google.com/maps/place/Sunnyside,+Queens,+Nowy+Jork,+Stany+Zjednoczone/@40.7403149,-73.9444892,14z/data=!3m1!4b1!4m5!3m4!1s0x89c25ed16db83ad1:0xbc845c2a1ddd9c48!8m2!3d40.7432759!4d-73.9196324"
-                        target="_blank">49-02 Laurel Hill Blvd, Queens, NY 1137</a>
+                <div class="testimonial">
+                    <img src="./images/image-jennie.jpg" alt="Jennie"/>
+                    <p class="quote">
+                        Incredible end result! Our sales increased over 400%
+                        when we worked with Sunnyside. Highly recommended!
+                    </p>
+                    <p class="author">Jennie F.</p>
+                    <p class="position">Business Owner</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="images">
+        <div class="milk"></div>
+        <div class="orangePlate"></div>
+        <div class="iceCream"></div>
+        <div class="sugarCubes"></div>
+    </section>
+    <section id="contact">
+        <div class="contact-container">
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24183.894792908377!2d-73.94448923942666!3d40.74031489325027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ed16db83ad1%3A0xbc845c2a1ddd9c48!2sSunnyside%2C%20Queens%2C%20Nowy%20Jork%2C%20Stany%20Zjednoczone!5e0!3m2!1spl!2spl!4v1635853114820!5m2!1spl!2spl"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="contact-details hours">
+                <h3>Opening hours</h3>
+                <br>
+                Monday-Friday: 8:30-18:00
+                <br>
+                Saturday: 8:30-14:00
+            </div>
+            <div class="contact-details contact-options">
+                <h3>Contact</h3>
+                <br>
+                email : <a href="mailto:contact@sunnyside.com">contact@sunnyside.com</a>
+                <br>
+                phone number: <a href="tel:+48663131993">663-131-993</a>
+                <br>
+                address: <a
+                    href="https://www.google.com/maps/place/Sunnyside,+Queens,+Nowy+Jork,+Stany+Zjednoczone/@40.7403149,-73.9444892,14z/data=!3m1!4b1!4m5!3m4!1s0x89c25ed16db83ad1:0xbc845c2a1ddd9c48!8m2!3d40.7432759!4d-73.9196324"
+                    target="_blank">49-02 Laurel Hill Blvd, Queens, NY 1137</a>
+            </div>
+        </div>
 
 
-        </section>
+    </section>
 
-            <footer>
-                <div class="footerNav">
-                    <img src="./images/footerlogo.svg" alt="logo"/>
-                    <ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#">Top</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
-                    </ul>
-                    <div class="socialBar">
-                        <a href="https://www.facebook.com/"
-                        ><img
-                                src="./images/icon-facebook.svg"
-                                alt="icon-facebook"
-                        /></a>
-                        <a href="https://www.instagram.com/"
-                        ><img
-                                src="./images/icon-instagram.svg"
-                                alt="icon-instagram"
-                        /></a>
-                        <a href="https://twitter.com/?lang=en"
-                        ><img
-                                src="./images/icon-twitter.svg"
-                                alt="icon-twitter"
-                        /></a>
-                        <a href="https://www.pinterest.com/"
-                        ><img
-                                src="./images/icon-pinterest.svg"
-                                alt="icon-pinterest"
-                        /></a>
-                    </div>
-                </div>
+    <footer>
+        <div class="footerNav">
+            <img src="./images/footerlogo.svg" alt="Sunnyside logo"/>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#">Top</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+            </ul>
+            <div class="socialBar">
+                <a href="https://www.facebook.com/"
+                ><img
+                        src="./images/icon-facebook.svg"
+                        alt="icon-facebook"
+                /></a>
+                <a href="https://www.instagram.com/"
+                ><img
+                        src="./images/icon-instagram.svg"
+                        alt="icon-instagram"
+                /></a>
+                <a href="https://twitter.com/?lang=en"
+                ><img
+                        src="./images/icon-twitter.svg"
+                        alt="icon-twitter"
+                /></a>
+                <a href="https://www.pinterest.com/"
+                ><img
+                        src="./images/icon-pinterest.svg"
+                        alt="icon-pinterest"
+                /></a>
+            </div>
+        </div>
 
-            </footer>
+    </footer>
 </div>
 <script src="./js/main.js"></script>
 </body>
